--- a/index.html
+++ b/index.html
@@ -53,8 +53,36 @@
             </div>
         </section>
     </header>
+
     <section class="section-2">
-        <div class="container"></div>
+        <div class="container s2">
+
+            <div class="content-box-2">
+                <h2 class="heading-2" style="color:black">Get noise free<br> sound everytime</h2>
+                <p class="paragraph">Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+
+                <div class="mini-box">
+                    <img src="./img/Icon-1.png" alt="icon">
+                    <div class="mini-text-box">
+                        <span class="bold-span">50+ Unique Design Blocks</span><br>
+                        <span class="simple-span">with Carefully Coded</span>
+                    </div>
+                </div>
+
+                <div class="mini-box">
+                    <img src="./img/Icon-2.png" alt="icon">
+                    <div class="mini-text-box">
+                        <span class="bold-span">Mobile First Design</span><br>
+                        <span class="simple-span">on Every Devices</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="img-box-2">
+                <img src="./img/img-2.png" alt="img">
+            </div>
+
+        </div>
     </section>
     <section class="section-3">
         <div class="container"></div>
