--- a/index.html
+++ b/index.html
@@ -85,10 +85,63 @@
         </div>
     </section>
     <section class="section-3">
-        <div class="container"></div>
+        <div class="container s3">
+            <h2 class="k50 heading-2">It’s everything you’ll ever need</h2>
+            <ul class="everything">
+
+                <li class="ev-list">
+                    <img src="./img/Icon4-1.png" alt="icon">
+                    <p class="icon-p">50+ Unique Design Blocks</p>
+                </li>
+
+                <li class="ev-list">
+                    <img src="./img/Icon4-2.png" alt="icon">
+                    <p class="icon-p">Multiple Layouts</p>
+                </li>
+
+                <li class="ev-list">
+                    <img src="./img/Icon4-3.png" alt="icon">
+                    <p class="icon-p">Mobile First Design</p>
+                </li>
+
+
+                <li class="ev-list">
+                    <img src="./img/Icon4-4.png" alt="icon">
+                    <p class="icon-p">Fully Responsive</p>
+                </li>
+
+                <li class="ev-list break">
+                    <img src="./img/Icon4-5.png" alt="icon">
+                    <p class="icon-p">Bootstrap 4 Framework</p>
+                </li>
+                <break></break>
+
+                <li class="ev-list ">
+                    <img src="./img/Icon4-6.png" alt="icon">
+                    <p class="icon-p">Humanly Support</p>
+                </li>
+                <li class="ev-list">
+                    <img src="./img/Icon4-7.png" alt="icon">
+                    <p class="icon-p">Lifetime Updates</p>
+                </li>
+                <li class="ev-list">
+                    <img src="./img/Icon4-8.png" alt="icon">
+                    <p class="icon-p">Rich Documentation</p>
+                </li>
+            </ul>
+        </div>
     </section>
+
     <section class="section-4">
-        <div class="container"></div>
+        <div class="container">
+            <h2 class="heading-2 center-h">Enjoy your music</h2>
+            <p class="center-p">Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+            <div class="img-box-4">
+                <img src="./img/left-4.png" alt="left" class="left">
+                <img src="./img/right-4.png" alt="right" class="right">
+            </div>
+
+        </div>
     </section>
     <section class="section-5">
         <div class="container"></div>
