--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
         </div>
     </section>
     <section class="section-5">
-        <div class="container"></div>
+        <div class="container s5">
+
+        </div>
     </section>
     <section class="section-6">
         <div class="container"></div>
