--- a/index.html
+++ b/index.html
@@ -145,16 +145,68 @@
     </section>
     <section class="section-5">
         <div class="container s5">
+            <h2 class="heading-2">2k+ people are using this headset</h2>
+            <p class="paragraph">Create custom landing pages with Omega that converts more visitors than any website. With lots of unique blocks, you can easily build a page without coding.</p>
+            <a href="#" class="submit">Try it now</a>
 
         </div>
     </section>
     <section class="section-6">
-        <div class="container"></div>
+        <div class="container c6">
+            <div class="heading-box-6">
+                <h2 class="50k heading-2">What users say</h2>
+                <p>Create custom landing pages with Omega that converts more visitors than any website.</p>
+            </div>
+            <div class="content-box-6">
+                <div class="box-6-1">
+                    <p class="p-6">OMG! I cannot believe that I have got a brand new landing page after getting Omega. It was super easy to edit and publish.</p>
+                    <div class="person">
+                        <img src="./img/profile-6-1.png" alt="profile" class="img-6">
+                        <div class="p-info">
+                            <span class="name-6">Jonathan Taylor</span><br>
+                            <span id="company-6">CEO at Creativex</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box-6-1">
+                    <p class="p-6">OMG! I cannot believe that I have got a brand new landing page after getting Omega. It was super easy to edit and publish.</p>
+                    <div class="person">
+
+                        <div class="img-6"><img src="./img/profile-6-2.png" alt="profile"></div>
+
+                        <div class="p-info">
+                            <span class="name-6">Marie Stanley</span><br>
+                            <span id="company-6">Digital Marketer, Writer</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <ul class="slider-list">
+                <li class="slider-item n1">
+                    <a href="#"></a>
+                </li>
+                <li class="slider-item">
+                    <a href="#"></a>
+                </li>
+                <li class="slider-item">
+                    <a href="#"></a>
+                </li>
+                <li class="slider-item">
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </div>
     </section>
     <section class="section-7">
-        <div class="container"></div>
+        <div class="container s7">
+            <h2 class="heading-2" style="color:white">Enjoy every beat.<br> Get a new headphone.</h2>
+            <a href="#" class="submit">Buy now</a>
+        </div>
     </section>
-    <footer></footer>
+    <footer>
+
+    </footer>
 
 </body>
 
