--- a/index.html
+++ b/index.html
@@ -205,7 +205,16 @@
         </div>
     </section>
     <footer>
-
+        <nav class="nav">
+            <div class="container">
+                <h1>Omega</h1>
+                <ul class="footer-list">
+                    <li class="footer-item"><a href="#">Support</a></li>
+                    <li class="footer-item"><a href="#">Privacy Policy</a></li>
+                    <li class="footer-item"><a href="#">Terms and Conditions</a></li>
+                </ul>
+                <a href="#" class="footer-link">© 2020 UXTheme, All Rights Reserved</a>
+        </nav>
     </footer>
 
 </body>
