--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="nav">
             <div class="big-container">
-                <h1>Omega</h1>
+                <h1 class="Omega-heading">Omega</h1>
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="#">Demos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Pages</a></li>
